--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 dj-database-url == 0.5.0
 gunicorn == 20.1.0
 whitenoise == 5.2.0
-djang0 == 2.2
+django == 2.2
 asgiref==3.3.4
 gunicorn==20.1.0
 pytz==2021.1
